Fixing responsiveness on mobile

--- a/src/components/ReferEarn/ReferEarn.css
+++ b/src/components/ReferEarn/ReferEarn.css
@@ -108,7 +108,6 @@
 
   .refer-earn-text h1 {
     max-width: 100% !important;
-    font-size: 2.2em;
   }
 
   .refer-earn-text p {
